--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <script src="index.js"></script>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">        
     </head>
-    <body>
+    <body style="background-color:#a15050;">
         <h1>Login</h1>
         <h2>Sign in to your account</h2>
         <input type="text" placeholder="Username"/>
