--- a/login.html
+++ b/login.html
@@ -10,17 +10,17 @@
 </head>
 <body class="Login" style="background-color:#a15050 ;">
     <div class="container">
-        <h2 class="text center">Login</h2>
-        <form class="login form">
-            <div class="input data">
+        <h2 class="text-center">Login</h2>
+        <form class="loginForm">
+            <div class="input-form">
                 <label for="username" class="label">Username</label>
                 <input type="text" id="username" class="input">
-                <span class="error"></span>
+                <span class="error-message"></span>
             </div>
-            <div>
+            <div class="input-form">
                 <label for="password" class="label">Password</label>
-                <input type="text" id="password" class="password">
-                <span class="error"></span>
+                <input type="password" id="password" class="password">
+                <span class="error-message"></span>
             </div>
             <input type="submit" class="button" value="Login">
         </form>
